<resources>
    <string name="app_name">DevTest</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_store_by_name">Find store by name</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">pickup</string>
    <string name="catering">catering</string>
    <string name="curbside">curbside</string>
    <string name="burger_craze">Burger Craze</string>


    <string-array name="sort">
        <item>225 Central Park West, NY 10024, USA</item>
        <item>284 Central Park West, NY 10058, USA</item>
        <item>258 Central Park West, NY 10477, USA</item>
    </string-array>
</resources>