<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bottomFragments.HomeFragment">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delivery"
        android:layout_width="103dp"
        android:layout_height="36dp"
        app:cornerRadius="12dp"
        android:drawableStart="@drawable/ic_bike"
        android:text="@string/delivery"
        android:layout_marginTop="25dp"
        style="@style/btn_delivery_style"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pickup"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:text="@string/pickup"
        android:gravity="center"
        style="@style/btn_style"
        app:cornerRadius="12dp"
        app:layout_constraintLeft_toRightOf="@id/delivery"
        app:layout_constraintRight_toLeftOf="@id/catering"
        app:layout_constraintTop_toTopOf="@id/delivery"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/catering"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:text="@string/catering"
        style="@style/btn_style"
        app:cornerRadius="12dp"
        app:layout_constraintRight_toLeftOf="@id/curbside"
        app:layout_constraintLeft_toRightOf="@id/pickup"
        app:layout_constraintTop_toTopOf="@id/delivery"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/curbside"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:text="@string/curbside"
        style="@style/btn_style"
        app:cornerRadius="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/catering"
        app:layout_constraintTop_toTopOf="@id/delivery"/>

    <EditText
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/edit_text_style"
        android:paddingStart="20dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/delivery"
        android:hint="@string/find_store_by_name"
        android:layout_marginTop="25dp"/>
    
    <TableLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="36dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>